# Multi-tool-Agent

./: .dockerignore  .env.example  .env.local-embeddings.example  .gitignore  Dockerfile  Launch Multi Tool Agent App.bat  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  render.yaml  using_step.tex
app/: worker.py
config/: mcp_servers.example.json
docs/: agent-platform-verification.md  baseline-audit-2026-06-15.md  demo-script.md  deployment.md  internship-project-prep.md  project-status-2026-06-15.md  project-status-2026-06-19.md  resume-bullets.md
evaluation/: agent_scenarios.json  retrieval_corpus.json  retrieval_queries.json
migrations/: env.py
scripts/: check-baseline.ps1  evaluate_agent_platform.py  evaluate_retrieval.py  fault_injection_check.py  start-agent-app.ps1  start-local-embeddings.ps1  verify-local-embeddings.ps1
tests/: conftest.py  test_agent_evaluation.py  test_approvals.py  test_async_chat_facade.py  test_async_run_service.py  test_async_runs_api.py  test_calculator.py  test_ccf_catalog_tool.py  test_document_extractor_tool.py  test_document_file_parser.py  test_document_parser_config.py  test_document_service.py  test_documents.py  test_embeddings.py  test_evaluate_retrieval.py  test_exports_api.py  test_health.py  test_hierarchical_chunking.py  test_knowledge_store.py  test_llm_gateway.py  test_mcp_discovery.py  test_messages.py  test_messages_api.py  test_ocr.py  test_outbox_service.py  test_parent_child_retrieval_units.py  test_parent_child_retriever.py  test_platform_database_url.py  test_registry.py  (+19 more)
(+105 files in other folders)
